Swagger Configuration In Client Management Service

--- a/user_mgt_service/src/main/resources/application.properties
+++ b/user_mgt_service/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 server.port=8083
+spring.application.name=userManagementService
+spring.datasource.url=jdbc:postgresql://localhost:5432/usermanagement?serverTimezone=UTC
+spring.datasource.username=postgres
+spring.datasource.password=123456789
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+
+spring.jpa.database=postgresql
+#`hibernate_sequence' doesn't exist
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+# drop n create table, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create
+#spring.security.user.name= app-user
+#spring.security.user.password= ba84853f-c111-44e2-8fec-5dd94505db63
